vodafone_api_infra.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: |

Parameters:
  CandidateName: 
    Type: String
    Default: Anthony Eghobor
    Description: Anthony Eghobor

  InstanceType:
    Type: String
    Default: t2.micro
    Description: Amazon EC2 instance type for the instances

  KeyPair:
    Description: Key Pair for remote access
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: vodafone

  BastionInstanceType:
    Type: String
    Default: t2.micro
    Description: Amazon EC2 instance for bastion host

############################################################################
   

Resources:


  ################### NETWORK ####################

  VodafoneVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [VodafoneVPC, !Ref CandidateName]]

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PublicSubnetA, !Ref CandidateName]]

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PublicSubnetB, !Ref CandidateName]]

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PrivateSubnetA, !Ref CandidateName]]

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PrivateSubnetB, !Ref CandidateName]]
  
  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select [2, !GetAZs ""]
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PrivateSubnetC, !Ref CandidateName]]

  VodafoneIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [IGW, !Ref CandidateName]]

  VodafoneNetworkACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [NACL, !Ref CandidateName]]
  

  VodafonePrivateNetworkACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PrivateNACL, !Ref CandidateName]]

  
  VodafoneNACLEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
      NetworkAclId: !Ref VodafoneNetworkACL

  VodafoneNACLEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: -1
      RuleAction: allow
      RuleNumber: 101
      NetworkAclId: !Ref VodafoneNetworkACL

  VodafoneNACLEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 10.0.0.0/16
      Protocol: 6
      RuleAction: allow
      RuleNumber: 100
      PortRange:
         From: 22
         To: 22
      NetworkAclId: !Ref VodafonePrivateNetworkACL 

  VodafoneNACLEntry4:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 10.0.0.0/16
      Protocol: 6
      RuleAction: allow
      RuleNumber: 101
      PortRange:
        From: 80
        To: 80
      NetworkAclId: !Ref VodafonePrivateNetworkACL

  VodafoneNACLEntry5:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 10.0.0.0/16
      Protocol: 6
      RuleAction: allow
      RuleNumber: 102
      PortRange:
        From: 3306
        To: 3306
      NetworkAclId: !Ref VodafonePrivateNetworkACL

  VodafoneNACLEntry6:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
       NetworkAclId: !Ref VodafonePrivateNetworkACL
       RuleNumber: 103
       Protocol: -1
       Egress: true
       RuleAction: allow
       CidrBlock: 0.0.0.0/0

  subnetacl1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref VodafoneNetworkACL
      SubnetId: !Ref PublicSubnetA

  subnetacl2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref VodafoneNetworkACL
      SubnetId: !Ref PublicSubnetB

  subnetacl3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref VodafonePrivateNetworkACL
      SubnetId: !Ref PrivateSubnetA

  subnetacl4:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref VodafonePrivateNetworkACL
      SubnetId: !Ref PrivateSubnetB
  
  subnetacl5:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref VodafonePrivateNetworkACL
      SubnetId: !Ref PrivateSubnetC
      
  VodafoneRoutePublic:
    Type: AWS::EC2::RouteTable

    
    Properties:
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PublicRoute, !Ref CandidateName]]

  VodafoneRoutePrivate:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VodafoneVPC
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [PrivateRoute, !Ref CandidateName]]

  VodafoneSGALB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS Assignment - Allows web traffic to Alb 
      VpcId: !Ref VodafoneVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [ALBSecurityGroup, !Ref CandidateName]]

  VodafoneSGBationAndController:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion Host Security Group
      VpcId: !Ref VodafoneVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 84.67.117.253/32 
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [BastionSecurityGroup, !Ref CandidateName]]

  VodafoneSGapp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS Assignment - App server security group
      VpcId: !Ref VodafoneVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 84.70.171.242/32
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 84.70.171.242/32
      Tags:
        - Key: environment
          Value: Vodafone-AWS-Assignment
        - Key: Name
          Value: !Join ["-", [AppServerSecurityGroup, !Ref CandidateName]]

  VodafoneGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VodafoneVPC
      InternetGatewayId: !Ref VodafoneIGW

  subnetRoutePublicA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VodafoneRoutePublic
      SubnetId: !Ref PublicSubnetA

  subnetRoutePublicB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VodafoneRoutePublic
      SubnetId: !Ref PublicSubnetB

  subnetRoutePrivateA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VodafoneRoutePrivate
      SubnetId: !Ref PrivateSubnetA

  subnetRoutePrivateB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VodafoneRoutePrivate
      SubnetId: !Ref PrivateSubnetB

  subnetRoutePrivateC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VodafoneRoutePrivate
      SubnetId: !Ref PrivateSubnetC

  publicroute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref VodafoneRoutePublic
      GatewayId: !Ref VodafoneIGW


  ###################### WEB SERVER ##########################

  VodafoneLaunchConfig: 
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: true
      ImageId: ami-0ffea00000f287d30
      KeyName: !Ref KeyPair
      IamInstanceProfile: !Ref ApiInstanceProfile
      SecurityGroups: 
        - !Ref VodafoneSGapp
      InstanceType: 
        !Ref InstanceType

  VodafoneASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Join ["-", [WebServerASG, !Ref "CandidateName"]]
      AvailabilityZones: 
        - !Select [0, !GetAZs ""]
        - !Select [1, !GetAZs ""]
      VPCZoneIdentifier: 
        - !Ref PublicSubnetA 
        - !Ref PublicSubnetB
      LaunchConfigurationName: !Ref VodafoneLaunchConfig
      MinSize: 2
      MaxSize: 4
      DesiredCapacity: 2
      # TargetGroupARNs: 
      #   - !Ref VodafoneTargetGroup
      Tags:
        - Key: Name
          Value: !Join ["-", ["WebServer", !Ref CandidateName]]
          PropagateAtLaunch: true

  ApiRole: 
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
    
  RolePolicies: 
    Type: "AWS::IAM::Policy"
    Properties: 
      PolicyName: "vodafoneapi"
      PolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - Effect: "Allow"
            Action: "*"
            Resource: "*"
      Roles: 
        - Ref: "ApiRole"
        
  ApiInstanceProfile: 
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      Path: "/"
      Roles: 
        - Ref: "ApiRole"
 
  
  ################## APPLICATION LOAD BALANCER ####################


  # VodafoneApplicationLoadBalancer:
  #   Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
  #   Properties:
  #     Name: "VodafoneApplicationLoadBalancer"
  #     Scheme: "internet-facing"
  #     Type: "application"
  #     Subnets: 
  #       - !Ref PublicSubnetA
  #       - !Ref PublicSubnetB
  #     SecurityGroups: 
  #       - !Ref VodafoneSGALB
  #     IpAddressType: "ipv4"
  #     LoadBalancerAttributes: 
  #       - Key: "deletion_protection.enabled"
  #         Value: "false"
  #     Tags:
  #       - Key: Name
  #         Value: !Join ["-", [AppLoadBalancer, !Ref CandidateName]]

  # VodafoneHTTPListener:
  #   Type: "AWS::ElasticLoadBalancingV2::Listener"
  #   Properties:
  #     LoadBalancerArn: !Ref VodafoneApplicationLoadBalancer
  #     Port: 80
  #     Protocol: "HTTP"
  #     DefaultActions: 
  #       - Order: 1
  #         TargetGroupArn: !Ref VodafoneTargetGroup
  #         Type: "forward"

                
  # VodafoneTargetGroup:
  #   Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
  #   Properties:
  #     HealthCheckIntervalSeconds: 30
  #     HealthCheckPath: "/"
  #     Port: 3000
  #     Protocol: "HTTP"
  #     HealthCheckPort: "traffic-port"
  #     HealthCheckProtocol: "HTTP"
  #     HealthCheckTimeoutSeconds: 10
  #     UnhealthyThresholdCount: 3
  #     TargetType: "instance"
  #     Matcher: 
  #       HttpCode: "200"
  #     HealthyThresholdCount: 3
  #     VpcId: !Ref VodafoneVPC
  #     Name: "Vodafone-devops-test-tg"
  #     HealthCheckEnabled: true
  #     Tags:
  #       - Key: Name
  #         Value: !Join ["-", [AlbTargetGroup, !Ref CandidateName]]

               
  # VodafoneListenerRule:
  #   Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
  #   Properties:
  #     Priority: "1"
  #     ListenerArn: !Ref VodafoneHTTPListener
  #     Conditions: 
  #       - Field: path-pattern
  #         Values:
  #           - api
  #     Actions: 
  #       - Type: "forward"
  #         TargetGroupArn: !Ref VodafoneTargetGroup

  #####################  BASTION AND ANSIBLE CONTROLLER ###############################


  # VodafoneBastionASG:
  #   Type: AWS::AutoScaling::AutoScalingGroup
  #   Properties:
  #     AutoScalingGroupName: !Join ["-", [BastionASG, !Ref "CandidateName"]]
  #     LaunchConfigurationName: !Ref VodafoneBastionLaunchConfig
  #     VPCZoneIdentifier:
  #       - !Ref PublicSubnetA
  #       - !Ref PublicSubnetB
  #     MinSize: "1"
  #     DesiredCapacity: "1"
  #     MaxSize: "1"
  #     Tags:
  #       - Key: Name
  #         Value: !Join ["-", ["BastionHostASG", !Ref CandidateName]]
  #         PropagateAtLaunch: true

  # VodafoneBastionLaunchConfig:
  #   Type: AWS::AutoScaling::LaunchConfiguration
  #   Properties:
  #     AssociatePublicIpAddress: true
  #     ImageId: ami-0ffea00000f287d30
  #     InstanceType: !Ref BastionInstanceType
  #     KeyName: !Ref KeyPair
  #     SecurityGroups:
  #       - !Ref VodafoneSGBationAndController



########################  DATABASE  - DYNAMODB ###########################


  VodafoneApiDynamoDBTable: 
    Type: AWS::DynamoDB::Table
    Properties: 
      TableName: VodafoneApiDynamoDb
      AttributeDefinitions: 
        - AttributeName: "created_at"
          AttributeType: "N"
        - AttributeName: "id"
          AttributeType: "S"
      KeySchema: 
        - AttributeName: "id"
          KeyType: "HASH"
        - AttributeName: "created_at"
          KeyType: "RANGE"
      ProvisionedThroughput: 
        ReadCapacityUnits: "5"
        WriteCapacityUnits: "5"
      
# Outputs:
#   LoadBalancerDNSName:
#     Description: The DNSName of the load balancer
#     Value: !GetAtt VodafoneApplicationLoadBalancer.DNSName
